fix sidebar bg not visible on prod

--- a/resources/scss/_nav.scss
+++ b/resources/scss/_nav.scss
@@ -30,6 +30,8 @@
   }
 }
 
+
+
 .sidebar-main {
 	.list {
 		position: absolute;
@@ -68,4 +70,17 @@
 			}
 		}
 	}
+}
+
+// sidebar animation staggeringVNav
+
+.bg-variant {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: #ffffff;
+	z-index: -1;
 }
