--- a/resources/scss/app.css
+++ b/resources/scss/app.css
@@ -120,6 +120,17 @@
   color: inherit;
 }
 
+.bg-variant {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: -1;
+}
+
 .splide-main:hover .splide__arrows {
   opacity: 1;
 }
